what next for hermeneutics kit

--- a/ai-hermeneutics-kit.html
+++ b/ai-hermeneutics-kit.html
@@ -32,10 +32,11 @@
           <li><a href="ai-kit-forensics.html">AI Text Forensics (Practical Analysis)</a></li>
           <li><a href="ai-kit-machine-speaks.html">The Machine Speaks (Philosophy of AI Language)</a></li>
           <li><a href="ai-kit-distanciation.html">Distanciation & AI (Ricoeur's Framework)</a></li>
+          <li><a href="ai-kit-and-next.html">And Next?</a></li>
+          <!-- <li><a href="ai-kit-methods.html">Methods for Reading AI Texts (Core Techniques)</a></li>
           <li><a href="ai-kit-strategies.html">Reading Strategies Toolkit (Applied Methods)</a></li>
-          <li><a href="ai-kit-methods.html">Methods for Reading AI Texts (Core Techniques)</a></li>
           <li><a href="ai-kit-case-studies.html">Case Studies in AI Interpretation</a></li>
-          <li><a href="ai-kit-glossary.html">Glossary & Key Concepts</a></li>
+          <li><a href="ai-kit-glossary.html">Glossary & Key Concepts</a></li> -->
         </ul>
       </nav>
       <div class="bottom-links">
