--- a/ai-kit-death-author.html
+++ b/ai-kit-death-author.html
@@ -26,8 +26,8 @@
     <h3>What AI Changes</h3>
     <ul>
       <li><strong>The Metaphor Becomes Literal:</strong> Barthes spoke metaphorically; AI makes it concrete</li>
-      <li><strong>No Biographical Fallacy:</strong> There's no author's life to mistakenly reference</li>
-      <li><strong>Pure "Tissue of Quotations":</strong> AI texts are literally assemblages of prior discourse</li>
+      <li><strong>No Biographical Fallacy:</strong> There's no author's life to mistakenly reference (though some relocate ‘authorship’ to users/designers)</li>
+      <li><strong>Pure "Tissue of Quotations":</strong> AI texts are statistical syntheses of prior discourse; they sometimes echo or even reproduce snippets of training data</li>
       <li><strong>The Reader Triumphant:</strong> With no author to defer to, interpretation becomes entirely reader-driven</li>
     </ul>
 
@@ -39,7 +39,7 @@
     <h4>1. The Purists (Meaning Requires Consciousness)</h4>
     <p>Followers of Schleiermacher and Betti argue that without an author's mind, there's no real meaning to interpret, only patterns to analyze. An AI poem might be formally correct but semantically empty.</p>
 
-    <h4>2. The Structuralists (Meaning Lives in Language)</h4>
+    <h4>2. The Structuralists / Post-Structuralists (Meaning Lives in Language)</h4>
     <p>Following Barthes and Derrida, this camp argues that meaning was never dependent on authorial consciousness anyway. Language itself generates meaning through its own systemic operations.</p>
 
     <h4>3. The Pragmatists (Meaning Emerges in Use)</h4>
