--- a/ai-kit-machine-speaks.html
+++ b/ai-kit-machine-speaks.html
@@ -67,7 +67,7 @@
       <li><strong>Ungrounded Circulation:</strong> AI recombines language without world-engagement</li>
       <li><strong>Statistical Truth:</strong> Correctness based on frequency, not authentic disclosure</li>
       <li><strong>Endless Chatter:</strong> Infinite generation of plausible but hollow discourse</li>
-      <li><strong>Technological Enframing:</strong> Language becomes a resource to be optimized and deployed</li>
+      <li><strong>Technological <a href="https://www2.hawaii.edu/~freeman/courses/phil394/The%20Question%20Concerning%20Technology.pdf">Enframing</a>:</strong> Language becomes a resource to be optimized and deployed</li>
     </ul>
 
     <h3>The Danger of AI Gerede</h3>
@@ -132,7 +132,7 @@
     <h3>Go Deeper (Open Sources)</h3>
     <ul>
       <li><strong>Philosophy of AI:</strong> Stanford Encyclopedia on <a href="https://plato.stanford.edu/entries/artificial-intelligence/">Artificial Intelligence</a></li>
-      <li><strong>Heidegger on Language:</strong> <a href="https://www.marxists.org/reference/subject/philosophy/works/ge/heidegg2.htm">"Language" (1971)</a></li>
+      <li><strong>Heidegger on Language:</strong> <a href="https://static1.squarespace.com/static/5e265eb50aee2d7e8a81ae69/t/6010cd7289e92877adac0e7d/1611713913485/Poetry__Language__Thought__Perennial_Classics.pdf">"Language" (1971)</a></li>
       <li><strong>Baudrillard on Simulation:</strong> <a href="https://web.stanford.edu/class/history34q/readings/Baudrillard/Baudrillard_Simulacra.html">"The Precession of Simulacra" (1981)</a></li>
       <li><strong>Haraway's Cyborg:</strong> <a href="https://theanarchistlibrary.org/library/donna-haraway-a-cyborg-manifesto">"A Cyborg Manifesto" (1985)</a></li>
     </ul>
