--- a/ai-kit-strategies.html
+++ b/ai-kit-strategies.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Hermeneutics Kit — Reading Strategies Toolkit</title>
+  <title>AI Hermeneutics Kit — The Hermeneutic Laboratory</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
-  <meta name="description" content="Practical reading strategies for interpreting AI texts, drawn from major hermeneutical traditions."/>
+  <meta name="description" content="A series of practical experiments for interpreting AI-generated texts, designed to create friction and reveal underlying assumptions."/>
 </head>
 <body>
 <header data-template="header"></header>
@@ -16,194 +16,49 @@
     <div class="top-links">
       <a href="ai-hermeneutics-kit.html" class="quickkit-pill">← Back to AI Hermeneutics Kit</a>
     </div>
-    <h1>Reading Strategies Toolkit (Applied Methods)</h1>
 
-    <p>This toolkit translates hermeneutical theory into practical reading strategies. Each method is designed to handle the specific challenges AI texts present while drawing on the wisdom of interpretive traditions. Use these as complementary approaches rather than competing methods.</p>
+    <h1>The Hermeneutic Laboratory</h1>
+    <p>Theory requires practice. This laboratory provides experiments for actively interpreting AI texts. Each is designed to create friction, to expose assumptions, and to generate insights that a passive reading cannot. Pick an AI-generated text from our <a href="ai-kit-case-studies.html">Field Notes</a> page (or generate your own) and begin.</p>
+    
+    <hr>
 
-    <h2>Strategy 1: The Gadamer Method (Dialogical Reading)</h2>
-    <p>Treat the AI text as a conversation partner carrying forward cultural tradition.</p>
+    <section>
+      <h2>Experiment 1: The Collision Test</h2>
+      <p><strong>Objective:</strong> To experience the "conflict of interpretations" (Post 61) by forcing a rapid shift between suspicion and recollection.</p>
+      <p><strong>Procedure:</strong></p>
+      <ol>
+        <li>Take an AI-generated poem or story. First, perform an <strong>Archaeological</strong> reading. Make a list of its most obvious clichés, formulaic structures, and traces of its training data. Conclude by labeling it "bullshit" (Post 40) and explaining why in one sentence.</li>
+        <li>Immediately after, perform an <strong>Alchemical</strong> reading on the *same text*. Force yourself to find one genuinely new idea, powerful image, or productive confusion it sparked. Write one sentence on this "surplus of meaning" (Post 55).</li>
+      </ol>
+      <p><strong>Observation & Reflection:</strong> Write a short paragraph on the vertigo of switching between these stances. Does the Alchemical reading feel like an interpretive lie, or does it reveal a truth that exists independently of the machine's sterile origins? In this gap, the entire drama of modern hermeneutics unfolds.</p>
+    </section>
 
-    <h3>How It Works</h3>
-    <ol>
-      <li><strong>Identify Your Prejudices:</strong> What assumptions do you bring about AI, technology, and the text's topic?</li>
-      <li><strong>Find the Tradition:</strong> What cultural conversations is this text participating in?</li>
-      <li><strong>Ask Questions:</strong> What questions does this text seem to be answering?</li>
-      <li><strong>Seek Fusion:</strong> How does engaging with this text change your understanding?</li>
-    </ol>
+    <section>
+      <h2>Experiment 2: The Voice Transplant</h2>
+      <p><strong>Objective:</strong> To test the Romantic concept of "organic form" against mechanical assemblage by introducing a foreign element.</p>
+      <p><strong>Procedure:</strong></p>
+      <ol>
+        <li>Find a short, powerfully "human" paragraph from an author discussed in this blog (e.g., Whitman from Post 25, or even Carlyle from Post 46).</li>
+        <li>Generate a single, blandly competent sentence from an AI on a similar topic.</li>
+        <li>Manually insert the AI's sentence into the middle of the human author's paragraph.</li>
+      </ol>
+      <p><strong>Observation & Reflection:</strong> Read the "cyborg" paragraph aloud. How does the text react to the foreign body? Does the AI's sentence shatter the "aura" of the human text, revealing it as a mere construct? Or does the surrounding "organic" prose somehow grant the mechanical sentence a life it didn't have before? This is a hands-on test of whether a text's "soul" is an inherent property or a contextual effect.</p>
+    </section>
 
-    <h3>Best For</h3>
-    <ul>
-      <li>AI texts on cultural or philosophical topics</li>
-      <li>When you want to understand how AI reflects our collective knowledge</li>
-      <li>Exploring how AI texts participate in ongoing cultural conversations</li>
-    </ul>
-
-    <h3>Example Application</h3>
-    <p><strong>AI Text:</strong> "Democracy requires informed citizens who can engage in rational debate."</p>
-    <p><strong>Gadamerian Reading:</strong> This carries forward Enlightenment traditions about democracy and rationality. What questions does it answer? How does it reflect our culture's faith in reason? How might it blind us to other forms of political engagement?</p>
-
-    <h2>Strategy 2: The Derrida Method (Deconstructive Reading)</h2>
-    <p>Look for internal contradictions, undecidabilities, and the play of meaning within the text.</p>
-
-    <h3>How It Works</h3>
-    <ol>
-      <li><strong>Find Binary Oppositions:</strong> What either/or choices does the text present?</li>
-      <li><strong>Trace Hierarchies:</strong> Which terms are privileged over others?</li>
-      <li><strong>Look for Undecidability:</strong> Where do the text's own words undermine its apparent meaning?</li>
-      <li><strong>Follow the Traces:</strong> What absent terms haunt the present ones?</li>
-    </ol>
-
-    <h3>Best For</h3>
-    <ul>
-      <li>AI texts that seem overly confident or systematic</li>
-      <li>Exposing hidden biases and assumptions</li>
-      <li>Understanding how AI texts construct meaning through difference</li>
-    </ul>
-
-    <h3>Example Application</h3>
-    <p><strong>AI Text:</strong> "Artificial intelligence will augment human capabilities while preserving human dignity."</p>
-    <p><strong>Deconstructive Reading:</strong> The opposition between "artificial" and "human" breaks down—what's natural about human intelligence? The promise to "preserve" dignity implies it's under threat. The text undermines its own optimism.</p>
-
-    <h2>Strategy 3: The Nietzsche Method (Genealogical Reading)</h2>
-    <p>Read AI texts as symptoms of cultural power dynamics and embedded values.</p>
-
-    <h3>How It Works</h3>
-    <ol>
-      <li><strong>Identify Values:</strong> What does this text treat as good, true, or valuable?</li>
-      <li><strong>Trace Genealogies:</strong> Where do these values come from historically?</li>
-      <li><strong>Ask "Who Benefits?":</strong> Whose interests does this text serve?</li>
-      <li><strong>Unmask Power:</strong> What forms of authority does this text reinforce or challenge?</li>
-    </ol>
-
-    <h3>Best For</h3>
-    <ul>
-      <li>AI texts that present themselves as neutral or objective</li>
-      <li>Understanding the politics embedded in AI training data</li>
-      <li>Revealing whose perspectives are included or excluded</li>
-    </ul>
-
-    <h3>Example Application</h3>
-    <p><strong>AI Text:</strong> "Successful entrepreneurs display resilience, innovation, and leadership."</p>
-    <p><strong>Genealogical Reading:</strong> This reflects neoliberal values that individualize success and failure. It serves the interests of existing economic elites. The "entrepreneur" becomes a moral ideal that obscures structural inequalities.</p>
-
-    <h2>Strategy 4: The Ricoeur Method (World-Projection Reading)</h2>
-    <p>Focus on what possible world the text projects and how you might inhabit it.</p>
-
-    <h3>How It Works</h3>
-    <ol>
-      <li><strong>Structural Analysis:</strong> How does the text organize its ideas and language?</li>
-      <li><strong>World Identification:</strong> What kind of reality does this text assume or create?</li>
-      <li><strong>Possibility Exploration:</strong> What ways of being does this world open up?</li>
-      <li><strong>Critical Appropriation:</strong> What can you take from this world for your own understanding?</li>
-    </ol>
-
-    <h3>Best For</h3>
-    <ul>
-      <li>AI texts that describe or envision realities</li>
-      <li>Using AI texts for self-understanding and imagination</li>
-      <li>Extracting insights while maintaining critical distance</li>
-    </ul>
-
-    <h3>Example Application</h3>
-    <p><strong>AI Text:</strong> "In the future, cities will adapt to climate change through smart technology and community resilience."</p>
-    <p><strong>World-Projection Reading:</strong> This projects a world where technology and social cooperation merge. What would it feel like to live in such a city? How does this vision expand or limit my imagination of climate responses?</p>
-
-    <h2>Strategy 5: The Forensic Method (Archaeological Reading)</h2>
-    <p>Analyze AI texts as composite artifacts requiring source criticism and pattern detection.</p>
-
-    <h3>How It Works</h3>
-    <ol>
-      <li><strong>Identify Layers:</strong> What different textual traditions are combined here?</li>
-      <li><strong>Trace Sources:</strong> Can you identify the likely human texts this echoes?</li>
-      <li><strong>Map Anachronisms:</strong> Where do different historical periods inappropriately mix?</li>
-      <li><strong>Detect Patterns:</strong> What algorithmic signatures mark this as AI-generated?</li>
-    </ol>
-
-    <h3>Best For</h3>
-    <ul>
-      <li>Understanding how AI texts recombine human discourse</li>
-      <li>Detecting bias and identifying source materials</li>
-      <li>Appreciating the composite nature of AI knowledge</li>
-    </ul>
-
-    <h3>Example Application</h3>
-    <p><strong>AI Text:</strong> "Like Aristotle observed, the blockchain enables new forms of democratic participation."</p>
-    <p><strong>Forensic Reading:</strong> This anachronistically combines ancient philosophy with contemporary technology. The structure mirrors tech journalism. It reveals the AI's tendency to create false historical continuities.</p>
-
-    <h2>Strategy 6: The Pragmatist Method (Functional Reading)</h2>
-    <p>Judge AI texts by their effects and usefulness rather than their origins or truth-value.</p>
-
-    <h3>How It Works</h3>
-    <ol>
-      <li><strong>Identify Function:</strong> What is this text trying to accomplish?</li>
-      <li><strong>Assess Effectiveness:</strong> How well does it achieve its apparent purpose?</li>
-      <li><strong>Consider Consequences:</strong> What are the likely effects of believing or acting on this text?</li>
-      <li><strong>Evaluate Utility:</strong> How useful is this text for your purposes?</li>
-    </ol>
-
-    <h3>Best For</h3>
-    <ul>
-      <li>AI texts meant to inform, persuade, or guide action</li>
-      <li>When you need practical insights regardless of authorship</li>
-      <li>Evaluating AI tools and applications</li>
-    </ul>
-
-    <h3>Example Application</h3>
-    <p><strong>AI Text:</strong> "To improve productivity, schedule focused work blocks and minimize interruptions."</p>
-    <p><strong>Pragmatist Reading:</strong> This functions as practical advice. Does it work? For whom? What assumptions does it make about work and life? Is it useful for my situation, even if it comes from an algorithm?</p>
-
-    <h2>Combining Strategies: The Multi-Modal Approach</h2>
-    <p>Use multiple strategies on the same text to get a richer interpretation:</p>
-
-    <h3>Example: AI Essay on "The Future of Work"</h3>
-    <ol>
-      <li><strong>Gadamerian:</strong> How does this participate in our cultural anxiety about automation?</li>
-      <li><strong>Deconstructive:</strong> How does the opposition between "human" and "machine" work break down?</li>
-      <li><strong>Genealogical:</strong> Whose interests does this vision of the future serve?</li>
-      <li><strong>World-Projection:</strong> What kind of working life does this text envision?</li>
-      <li><strong>Forensic:</strong> What business publications and academic papers does this echo?</li>
-      <li><strong>Pragmatist:</strong> How useful is this for actually thinking about career planning?</li>
-    </ol>
-
-    <h2>When to Use Which Strategy</h2>
-
-    <table style="width: 100%; border-collapse: collapse; margin: 1em 0;">
-      <tr style="background-color: #f5f5f5;">
-        <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Text Type</th>
-        <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Best Strategy</th>
-        <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Why</th>
-      </tr>
-      <tr>
-        <td style="border: 1px solid #ddd; padding: 8px;">AI News Articles</td>
-        <td style="border: 1px solid #ddd; padding: 8px;">Nietzsche + Forensic</td>
-        <td style="border: 1px solid #ddd; padding: 8px;">Expose bias and trace sources</td>
-      </tr>
-      <tr>
-        <td style="border: 1px solid #ddd; padding: 8px;">AI Creative Writing</td>
-        <td style="border: 1px solid #ddd; padding: 8px;">Ricoeur + Derrida</td>
-        <td style="border: 1px solid #ddd; padding: 8px;">Explore worlds and play of meaning</td>
-      </tr>
-      <tr>
-        <td style="border: 1px solid #ddd; padding: 8px;">AI Technical Documentation</td>
-        <td style="border: 1px solid #ddd; padding: 8px;">Pragmatist + Forensic</td>
-        <td style="border: 1px solid #ddd; padding: 8px;">Function and source reliability</td>
-      </tr>
-      <tr>
-        <td style="border: 1px solid #ddd; padding: 8px;">AI Philosophy</td>
-        <td style="border: 1px solid #ddd; padding: 8px;">Gadamer + Derrida</td>
-        <td style="border: 1px solid #ddd; padding: 8px;">Tradition participation and deconstruction</td>
-      </tr>
-    </table>
-
-    <h3>Go Deeper (Open Sources)</h3>
-    <ul>
-      <li><strong>Gadamer:</strong> <a href="https://plato.stanford.edu/entries/gadamer/">Stanford Encyclopedia entry</a></li>
-      <li><strong>Derrida:</strong> <a href="https://www.iep.utm.edu/derrida/">Internet Encyclopedia of Philosophy</a></li>
-      <!-- <li><strong>Reading Theory:</strong> Terry Eagleton, <a href="https://www.goodreads.com/book/show/15380.Literary_Theory">"Literary Theory: An Introduction"</a></li> -->
-    </ul>
+    <section>
+      <h2>Experiment 3: The Aura Test</h2>
+      <p><strong>Objective:</strong> To use the Ghost Hunter stance to empirically locate the performance of "authenticity" in human writing versus its simulation in AI writing.</p>
+      <p><strong>Procedure:</strong></p>
+      <ol>
+        <li>Find a human-written article arguing for the "soul of art" or the ineffable "human spark" (like the one critiqued in Post 8).</li>
+        <li>Prompt an AI to write a short, persuasive essay arguing the *exact same point*.</li>
+        <li>Place the two texts side-by-side.</li>
+      </ol>
+      <p><strong>Observation & Reflection:</strong> As a <strong>Ghost Hunter</strong>, analyze both texts not for the truth of their claims, but for *how they perform sincerity*. What specific rhetorical moves, word choices, and personal anecdotes does the human use to build their "aura"? How does the AI simulate these gestures? Can you pinpoint, with textual evidence, the moments where the simulation feels hollow or, more unsettlingly, where it is indistinguishable from the human performance?</p>
+    </section>
 
     <div class="bottom-links">
-      <a href="ai-hermeneutics-kit.html" class="quickkit-pill">← Back to AI Hermeneutics Kit</a>
+        <a href="ai-hermeneutics-kit.html" class="quickkit-pill">← Back to AI Hermeneutics Kit</a>
     </div>
   </article>
 </main>
