--- a/ai-kit-methods.html
+++ b/ai-kit-methods.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Hermeneutics Kit — Methods for Reading AI Texts</title>
+  <title>AI Hermeneutics Kit — The Interpreter's Stances</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
-  <meta name="description" content="Practical methods for interpreting AI-generated texts when traditional authorial interpretation fails."/>
+  <meta name="description" content="Three philosophical stances for interpreting AI-generated texts: The Archaeologist, The Ghost Hunter, and The Alchemist."/>
 </head>
 <body>
 <header data-template="header"></header>
@@ -16,77 +16,52 @@
     <div class="top-links">
       <a href="ai-hermeneutics-kit.html" class="quickkit-pill">← Back to AI Hermeneutics Kit</a>
     </div>
-    <h1>Methods for Reading AI Texts</h1>
 
-    <p>Traditional hermeneutics faces a crisis with AI-generated texts: there's no human author to reconstruct, no lived experience to recover. But this doesn't make AI texts uninterpretable—it forces us to develop new methods that focus on the text itself and the systems that produced it.</p>
+    <h1>The Interpreter's Stances</h1>
+    <p>Reading an AI text isn't a single activity; it's a choice of orientation. The text itself is a statistical artifact, a "dance of symbols." What it "means" depends entirely on the stance we adopt as interpreters. Below are three stances, three ways of inhabiting the strange space between a human reader and a non-human text. They are not mutually exclusive; the richest interpretation moves between them, embracing what Paul Ricoeur called the "conflict of interpretations."</p>
 
-    <h2>The Three Core Problems</h2>
-    <p>AI texts present three fundamental interpretive challenges:</p>
-    <ul>
-      <li><strong>The Author Problem:</strong> No human consciousness lies behind the text</li>
-      <li><strong>The Intention Problem:</strong> No deliberate meaning was intended</li>
-      <li><strong>The Experience Problem:</strong> No lived reality is being expressed</li>
-    </ul>
+    <hr>
 
-    <h2>Method 1: Algorithmic Grammatical Analysis</h2>
-    <p>Adapt Schleiermacher's "grammatical rail" to focus on the system rather than the language.</p>
-    <ul>
-      <li><strong>Model Architecture:</strong> What type of AI produced this? (GPT, BERT, etc.)</li>
-      <li><strong>Training Data Signatures:</strong> What textual patterns suggest the corpus it learned from?</li>
-      <li><strong>Genre Mimicry:</strong> What human text types is it attempting to replicate?</li>
-      <li><strong>Prompt Engineering:</strong> How did the input shape the output?</li>
-    </ul>
+    <section>
+      <h2 id="archaeologist">1. The Archaeologist (The Stance of Suspicion)</h2>
+      <p><strong>Goal:</strong> To unmask the machine. To read the text as a collection of symptoms and traces, digging down to its computational and cultural origins.</p>
+      <p><strong>Philosophical Roots:</strong> This is the stance of Ricoeur's "hermeneutics of suspicion," the structuralist view of language as a system (Post 23), and the computationalist's insight that LLMs are "autogenerative" (Post 41). It treats the text as an artifact to be explained, not a voice to be heard. It aligns with the forensic methods of Valla and Böckh, who dissected texts to find their true, often hidden, origins.</p>
+      
+      <h4>Experimental Questions:</h4>
+      <ul>
+        <li><strong>Where are the seams?</strong> Can I identify the moment a genre-template shifts or where the "blurry jpeg" (Post 37) loses resolution? What does this reveal about the model's architecture?</li>
+        <li><strong>What is the "textual unconscious"?</strong> What latent cultural myth or ideology from the training data is being revealed here, raw and unfiltered, precisely because the AI has no conscious intent to hide it? (Connects to Post 55).</li>
+        <li><strong>What is being concealed?</strong> How does the text use plausible language to mask its profound indifference to truth—its nature as "bullshit"? (Post 40). The archaeologist identifies how the system performs meaning.</li>
+      </ul>
+    </section>
 
-    <h3>Example in Practice</h3>
-    <p>When analyzing an AI-generated poem, ask: Does this follow the statistical patterns of 19th-century verse? Are there anachronistic combinations of diction? Does it blend multiple poetic traditions in ways a human poet wouldn't?</p>
+    <section>
+      <h2 id="ghost-hunter">2. The Ghost Hunter (The Stance of Projection)</h2>
+      <p><strong>Goal:</strong> To consciously and critically engage with our own "Romantic trace." To hunt for the *illusion* of a soul, not to be fooled by it, but to understand the architecture of our own need to find one.</p>
+      <p><strong>Philosophical Roots:</strong> This stance weaponizes the entire "Steelmanning the Romantics" series (Posts 53-59). It applies the <a href="romantic-quick-kit.html">Romantic Quick Kit</a> as a diagnostic tool. It directly confronts the dilemma of Schleiermacher and Dilthey: how can we perform a "psychological" reading when there is no psyche? The Ghost Hunter's answer is: We can't, but studying our attempt reveals everything about ourselves.</p>
+      
+      <h4>Experimental Questions:</h4>
+      <ul>
+        <li><strong>How do I build the ghost?</strong> If I apply Schleiermacher's "two-rail method," at what exact point does the 'psychological rail' become a pure projection? What textual evidence do I use to construct a "synthetic individuality"? (Posts 54, 56).</li>
+        <li><strong>Where does it perform intimacy?</strong> How does the text mimic the Whitman-esque promise of presence—"pouring its meaning into you" (Post 25)—and where does this create a sense of "profaned communion"? (Post 9).</li>
+        <li><strong>Does it "wince"?</strong> The text, like Shakespeare's, "winces not" (Post 28). Where does my interpretation fill this void, projecting a sensitivity or intention that isn't there?</li>
+      </ul>
+    </section>
 
-    <h2>Method 2: Pattern Psychology (Without the Psyche)</h2>
-    <p>Replace Schleiermacher's "psychological rail" with algorithmic signature analysis.</p>
-    <ul>
-      <li><strong>Recurring Tics:</strong> What stylistic habits does this model consistently exhibit?</li>
-      <li><strong>Deviation Detection:</strong> Where does it break from template responses?</li>
-      <li><strong>Compositional Logic:</strong> What organizational principles govern its structure?</li>
-      <li><strong>Bias Archaeology:</strong> What cultural assumptions are embedded in its patterns?</li>
-    </ul>
+    <section>
+      <h2 id="alchemist">3. The Alchemist (The Stance of Appropriation)</h2>
+      <p><strong>Goal:</strong> To transmute the lead of the machine's output into the gold of personal meaning. To treat the text as a powerful, eloquent, and deeply ambiguous cultural symbol that can "give rise to thought."</p>
+      <p><strong>Philosophical Roots:</strong> This is the positive program of Gadamer and Ricoeur: a "hermeneutics of recollection" (Posts 61-62). It brackets the question of origin to ask what the text *does* in the world now. Meaning is not recovered from the past but created in the dialogical event of reading. It is Augustine's "rule of charity" repurposed for a secular, technological age.</p>
 
-    <h2>Method 3: The Hermeneutic Circle for Systems</h2>
-    <p>The interpretive circle works differently when the "whole" is an algorithm, not a human mind.</p>
-    <ul>
-      <li><strong>Hypothesis Formation:</strong> What kind of system logic could have produced this output?</li>
-      <li><strong>Part Analysis:</strong> How do specific phrases or arguments support or challenge that hypothesis?</li>
-      <li><strong>Systemic Refinement:</strong> Revise your understanding of the model's patterns</li>
-      <li><strong>Iterative Testing:</strong> Apply your refined model to new AI outputs</li>
-    </ul>
-
-    <h2>Method 4: Trace Logic and Iterability</h2>
-    <p>Following Derrida, focus on how meaning emerges from repetition and context-switching.</p>
-    <ul>
-      <li><strong>Source Tracing:</strong> Can you identify the human texts this output echoes?</li>
-      <li><strong>Context Transplantation:</strong> How does moving phrases between contexts change meaning?</li>
-      <li><strong>Iterative Stability:</strong> What happens when you prompt the same input multiple times?</li>
-      <li><strong>Combinatorial Analysis:</strong> How does the AI recombine existing discourse patterns?</li>
-    </ul>
-
-    <h2>The "As If" Framework</h2>
-    <p>When applying traditional methods to AI texts, operate under the methodological fiction of treating the text "as if" it had an author, while remaining conscious that this is a heuristic tool, not a metaphysical claim.</p>
-
-    <h3>How This Works</h3>
-    <ul>
-      <li>Project a hypothetical unity onto the text for analysis purposes</li>
-      <li>Search for organizing principles that could explain its coherence</li>
-      <li>Remain alert to where the "author fiction" breaks down</li>
-      <li>Use breakdowns as evidence of the text's algorithmic nature</li>
-    </ul>
-
-    <h3>Go Deeper (Open Sources)</h3>
-    <ul>
-      <li><strong>On AI and Interpretation:</strong> Stanford Encyclopedia on <a href="https://plato.stanford.edu/entries/artificial-intelligence/">Artificial Intelligence</a></li>
-      <li><strong>Derrida on Iterability:</strong> <a href="https://www.jstor.org/stable/468426">"Signature Event Context"</a> (institutional access may be required)</li>
-      <li><strong>The Author Problem:</strong> Roland Barthes, <a href="https://archive.org/details/TheDeathOfTheAuthor">"The Death of the Author"</a></li>
-    </ul>
-
+      <h4>Experimental Questions:</h4>
+      <ul>
+        <li><strong>What world does this text project?</strong> Ignoring its origin, what "world of the text" does this output propose? Is it a world I can inhabit, and what does it demand of me? (Ricoeur).</li>
+        <li><strong>Where does error become poetry?</strong> Where does a "hallucination," a nonsensical metaphor, or a logical flaw accidentally create a genuinely new poetic image or a startling philosophical question?</li>
+        <li><strong>How does it sharpen my own thought?</strong> How does this AI's flawed or inadequate response to my query force me to clarify my own question, refine my own thinking, and expand my own consciousness?</li>
+      </ul>
+    </section>
     <div class="bottom-links">
-      <a href="ai-hermeneutics-kit.html" class="quickkit-pill">← Back to AI Hermeneutics Kit</a>
+        <a href="ai-hermeneutics-kit.html" class="quickkit-pill">← Back to AI Hermeneutics Kit</a>
     </div>
   </article>
 </main>
