revamped ai herm section

--- a/ai-hermeneutics-kit.html
+++ b/ai-hermeneutics-kit.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
-  <meta name="description" content="A toolkit for interpreting AI-generated texts: methods, theory, and practical strategies for reading algorithmic discourse."/>
+  <meta name="description" content="A toolkit for interpreting AI-generated texts, providing the historical and philosophical context for a rigorous hermeneutics of AI."/>
 </head>
 <body>
   <header data-template="header"></header>
@@ -18,25 +18,28 @@
       </div>
       <h1>AI Hermeneutics Kit</h1>
       <h2>How to use this</h2>
-      <ul>
-        <li>Use the Theory pages to understand the philosophical foundations.</li>
-        <li>Read through the Methods page to learn practical techniques for reading AI texts.</li>
-        <li>Apply the Strategies and Case Studies for hands-on interpretation practice.</li>
-        <li>Every page links to open sources for deeper exploration.</li>
-      </ul>
+      <p>This kit provides some theoretical and historical context for the central arguments of my blog. Its purpose is to show that the interpretive challenges posed by AI are not entirely new, but are intensifications of questions that the field of hermeneutics has been exploring for centuries. The pages are designed to build a coherent framework, moving from theory to a practical method of reading.</p>
 
       <nav class="toc">
+        <h3 style="margin-top: 1.5rem; font-size: 1.2rem;">Theoretical Foundations</h3>
         <ul>
-          <li><a href="ai-kit-death-author.html">The Death of the Author (From Theory to Reality)</a></li>
-          <li><a href="ai-kit-genealogy.html">Genealogy of Interpreters (Historical Perspectives)</a></li>
-          <li><a href="ai-kit-forensics.html">AI Text Forensics (Practical Analysis)</a></li>
-          <li><a href="ai-kit-machine-speaks.html">The Machine Speaks (Philosophy of AI Language)</a></li>
+          <li><a href="ai-kit-author-function.html">The Author-Function: From Romantic Soul to Algorithmic System</a></li>
+          <li><a href="ai-kit-interpretive-dialogue.html">The Interpretive Dialogue: When the Text Reads the Reader</a></li>
+          <li><a href="ai-kit-dangerous-book.html">The Dangerous Book: On Texts That Transform and Transgress</a></li>
+          <li><a href="ai-kit-hermeneutics-of-risk.html">AI and the Hermeneutics of Risk: New Forms of Dialogue and Danger</a></li>
+        </ul>
+
+        <h3 style="margin-top: 1.5rem; font-size: 1.2rem;">A Practical Method for Reading</h3>
+        <ul>
+            <li><a href="ai-kit-forensics.html">Reception & Form Diagnostics</a></li>
+        </ul>
+
+        <h3 style="margin-top: 1.5rem; font-size: 1.2rem;">Further Frameworks</h3>
+        <ul>
           <li><a href="ai-kit-distanciation.html">Distanciation & AI (Ricoeur's Framework)</a></li>
-          <li><a href="ai-kit-and-next.html">And Next?</a></li>
-          <!-- <li><a href="ai-kit-methods.html">Methods for Reading AI Texts (Core Techniques)</a></li>
-          <li><a href="ai-kit-strategies.html">Reading Strategies Toolkit (Applied Methods)</a></li>
-          <li><a href="ai-kit-case-studies.html">Case Studies in AI Interpretation</a></li>
-          <li><a href="ai-kit-glossary.html">Glossary & Key Concepts</a></li> -->
+          <li><a href="ai-kit-death-author.html">The Death of the Author (From Theory to Reality)</a></li>
+          <li><a href="ai-kit-machine-speaks.html">The Machine Speaks (Philosophy of AI Language)</a></li>
+          <li><a href="ai-kit-genealogy.html">Genealogy of Interpreters (Historical Perspectives)</a></li>
         </ul>
       </nav>
       <div class="bottom-links">
